--- a/revision/index.html
+++ b/revision/index.html
@@ -69,6 +69,7 @@
         <ul>
             <li><a href="./3-01-Storage-Units/">3.01 - Storage Units</a></li>
             <li><a href="./3-02-Binary-and-Hexadecimal/">3.02 - Binary and Hexadecimal</a></li>
+            <li><a href="./3-03-Binary-Arithmetic/">3.03 - Binary Arithmetic</a></li>
         </ul>
 
         <br />
