--- a/revision/3-03-Binary-Arithmetic/index.html
+++ b/revision/3-03-Binary-Arithmetic/index.html
@@ -72,6 +72,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../3-04-Binary-Shifts/">Next: 3.04 - Binary Shifts</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
