Add link to homepage

--- a/revision/index.html
+++ b/revision/index.html
@@ -70,6 +70,7 @@
             <li><a href="./3-01-Storage-Units/">3.01 - Storage Units</a></li>
             <li><a href="./3-02-Binary-and-Hexadecimal/">3.02 - Binary and Hexadecimal</a></li>
             <li><a href="./3-03-Binary-Arithmetic/">3.03 - Binary Arithmetic</a></li>
+            <li><a href="./3-04-Binary-Shifts/">3.04 - Binary Shifts</a></li>
         </ul>
 
         <br />
