ASCII and Unicode

--- a/revision/2A-04-Strings/index.html
+++ b/revision/2A-04-Strings/index.html
@@ -83,7 +83,7 @@
             </tr>
         </table>
 
-        <p><br />ASCII is a code which assigns each character a unique number. It will be explained further in Section 3. <!--TODO: replace with actual link--></p>
+        <p><br />ASCII is a code which assigns each character a unique number. It will be explained further in <a href="../3-05-ASCII-and-Unicode/">3.05 (ASCII and Unicode)</a>.</p>
 
         <p>Table 2 shows the ASCII functions in pseudo-code.</p>
 
