--- a/revision/3-04-Binary-Shifts/index.html
+++ b/revision/3-04-Binary-Shifts/index.html
@@ -79,6 +79,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../3-05-ASCII-and-Unicode/">Next: 3.05 - ASCII and Unicode</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
