--- a/revision/index.html
+++ b/revision/index.html
@@ -71,6 +71,7 @@
             <li><a href="./3-02-Binary-and-Hexadecimal/">3.02 - Binary and Hexadecimal</a></li>
             <li><a href="./3-03-Binary-Arithmetic/">3.03 - Binary Arithmetic</a></li>
             <li><a href="./3-04-Binary-Shifts/">3.04 - Binary Shifts</a></li>
+            <li><a href="./3-05-ASCII-and-Unicode/">3.05 - ASCII and Unicode</a></li>
         </ul>
 
         <br />
