--- a/revision/3-05-ASCII-and-Unicode/index.html
+++ b/revision/3-05-ASCII-and-Unicode/index.html
@@ -143,7 +143,7 @@
 
         <p class="definition">
             <img src="../icons/book.svg" class="icon" />
-            <strong>Unicode</strong> (ASCII) is a different character set which uses multiple bytes for each character.
+            <strong>Unicode</strong> is a different character set which uses multiple bytes for each character.
         </p>
         
         <p>Unicode can therefore encode many more characters than ASCII can: it covers every major language in the world. It can even encode emojis 🤯!</p>
