--- a/revision/3-05-ASCII-and-Unicode/index.html
+++ b/revision/3-05-ASCII-and-Unicode/index.html
@@ -172,6 +172,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../3-06-Images/">Next: 3.06 - Images</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
