--- a/revision/index.html
+++ b/revision/index.html
@@ -72,6 +72,7 @@
             <li><a href="./3-03-Binary-Arithmetic/">3.03 - Binary Arithmetic</a></li>
             <li><a href="./3-04-Binary-Shifts/">3.04 - Binary Shifts</a></li>
             <li><a href="./3-05-ASCII-and-Unicode/">3.05 - ASCII and Unicode</a></li>
+            <li><a href="./3-06-Images/">3.06 - Images</a></li>
         </ul>
 
         <br />
