Sound representation page

--- a/revision/3-06-Images/index.html
+++ b/revision/3-06-Images/index.html
@@ -68,7 +68,7 @@
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
-                <code><b>file size</b> (in bits) = <b>50</b> pixels &times; <b>100</b> pixels &times; <b>8</b> bits = <b>40000</b> bits = <b>5000</b> bytes</code>
+                <code><b>file size</b> (in bits) = <b>50</b> pixels &times; <b>100</b> pixels &times; <b>8</b> bits = <b>40,000</b> bits = <b>5000</b> bytes</code>
             </span>
         </p>
 
@@ -76,6 +76,11 @@
 
         <hr />
 
+        <br /> <br />
+
+        <a class="next-link" href="../3-07-Sound/">Next: 3.07 - Sound</a>
+
+        <br /> <br />
         <br /> <br />
 
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
