--- a/revision/index.html
+++ b/revision/index.html
@@ -73,6 +73,7 @@
             <li><a href="./3-04-Binary-Shifts/">3.04 - Binary Shifts</a></li>
             <li><a href="./3-05-ASCII-and-Unicode/">3.05 - ASCII and Unicode</a></li>
             <li><a href="./3-06-Images/">3.06 - Images</a></li>
+            <li><a href="./3-07-Sound/">3.07 - Sound</a></li>
         </ul>
 
         <br />
