Update titles and descriptions for SEO

--- a/revision/2A-Summary-Questions/index.html
+++ b/revision/2A-Summary-Questions/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../../main.css">
         <link rel="stylesheet" href="../main.css">
 
-        <title>Computer Science Revision</title>
+        <title>Section 2A Summary Questions | Computer Science Revision</title>
 
         <link rel="icon" type="image/png" href="../icons/logo.svg"/>
         <meta property="og:image" content="../icons/logo.png" />
@@ -13,7 +13,7 @@
         <meta property="og:image:height" content="512" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Section 2A Summary Questions | Computer Science Revision">
+        <meta name="description" content="Section 2A Summary Questions | Computer Science Revision (an online, mobile-friendly revision guide for GCSE Computer Science students)">
     </head>
 
     <body>
