--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="revision/main.css">
         <link rel="stylesheet" href="./main.css">
 
-        <title>Computer Science Revision</title>
+        <title>Home | Computer Science Revision</title>
 
         <link rel="icon" type="image/png" href="./revision/icons/logo.svg"/>
         <meta property="og:image" content="./revision/icons/logo.png" />
