--- a/revision/index.html
+++ b/revision/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../main.css">
         <link rel="stylesheet" href="./main.css">
 
-        <title>Computer Science Revision</title>
+        <title>Index | Computer Science Revision</title>
 
         <link rel="icon" type="image/png" href="./icons/logo.svg"/>
         <meta property="og:image" content="./icons/logo.png" />
