--- a/revision/3-07-Sound/index.html
+++ b/revision/3-07-Sound/index.html
@@ -78,6 +78,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../3-08-Compression/">Next: 3.08 - Compression</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
