--- a/revision/index.html
+++ b/revision/index.html
@@ -74,6 +74,7 @@
             <li><a href="./3-05-ASCII-and-Unicode/">3.05 - ASCII and Unicode</a></li>
             <li><a href="./3-06-Images/">3.06 - Images</a></li>
             <li><a href="./3-07-Sound/">3.07 - Sound</a></li>
+            <li><a href="./3-08-Compression/">3.08 - Compression</a></li>
         </ul>
 
         <br />
