Run-Length Encoding

--- a/revision/3-08-Compression/index.html
+++ b/revision/3-08-Compression/index.html
@@ -90,10 +90,14 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../3-09-Run-Length-Encoding/">Next: 3.09 - Run-Length Encoding</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
-        <script src="./main.js"></script>
     </body>
 </html>
