--- a/revision/index.html
+++ b/revision/index.html
@@ -75,6 +75,7 @@
             <li><a href="./3-06-Images/">3.06 - Images</a></li>
             <li><a href="./3-07-Sound/">3.07 - Sound</a></li>
             <li><a href="./3-08-Compression/">3.08 - Compression</a></li>
+            <li><a href="./3-09-Run-Length-Encoding/">3.09 - Run-Length Encoding</a></li>
         </ul>
 
         <br />
