--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <link rel="stylesheet" href="revision/main.css">
         <link rel="stylesheet" href="./main.css">
+        <link rel="stylesheet" href="./homepage.css">
 
         <title>Home | Computer Science Revision</title>
 
@@ -17,18 +18,12 @@
     </head>
 
     <body>
-        <h1>Computer Science Revision</h1>
+        <h1 id="heading">Computer Science Revision</h1>
         
-        <p><br />Welcome to <strong>Computer Science Revision</strong> by Rujul Nayak.</p>
+        <p>Welcome to Computer Science Revision by Rujul Nayak.</p>
 
         <p>This is an online, mobile-friendly revision guide for GCSE Computer Science students.</p>
 
-        <p><br /><b><a href="./revision/">Click here to check it out!</a></b></p>
-
-        <br />
-        <br />
-
-        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
-        <script src="./year.js"></script>
+        <p id="link"><b><a class="homepage-override" href="./revision/">Click here to check it out!</a></b></p>
     </body>
 </html>
