--- a/revision/index.html
+++ b/revision/index.html
@@ -76,6 +76,7 @@
             <li><a href="./3-07-Sound/">3.07 - Sound</a></li>
             <li><a href="./3-08-Compression/">3.08 - Compression</a></li>
             <li><a href="./3-09-Run-Length-Encoding/">3.09 - Run-Length Encoding</a></li>
+            <li><a href="./3-10-Huffman-Coding/">3.10 - Huffman Coding</a></li>
         </ul>
 
         <br />
