Finish off Section 3

--- a/revision/3-05-ASCII-and-Unicode/index.html
+++ b/revision/3-05-ASCII-and-Unicode/index.html
@@ -28,7 +28,7 @@
 
         <p class="definition">
             <img src="../icons/book.svg" class="icon" />
-            A <strong>character set</strong> is a collection of characters which can be encoded with binary numbers.
+            A <strong>character set</strong> is a collection of characters that a computer can recognise from their binary representation.
         </p>
 
         <p><b>Computers can therefore use this character set to convert between characters and binary numbers.</b></p>
