--- a/revision/3-09-Run-Length-Encoding/index.html
+++ b/revision/3-09-Run-Length-Encoding/index.html
@@ -118,6 +118,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../3-10-Huffman-Coding/">Next: 3.10 - Huffman Coding</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
