--- a/revision/index.html
+++ b/revision/index.html
@@ -77,6 +77,7 @@
             <li><a href="./3-08-Compression/">3.08 - Compression</a></li>
             <li><a href="./3-09-Run-Length-Encoding/">3.09 - Run-Length Encoding</a></li>
             <li><a href="./3-10-Huffman-Coding/">3.10 - Huffman Coding</a></li>
+            <li><a href="./3-Summary-Questions/">Summary Questions</a></li>
         </ul>
 
         <br />
