--- a/revision/3-10-Huffman-Coding/index.html
+++ b/revision/3-10-Huffman-Coding/index.html
@@ -155,6 +155,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../3-Summary-Questions/">Next: Section 3 Summary Questions</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
