--- a/revision/index.html
+++ b/revision/index.html
@@ -80,6 +80,12 @@
             <li><a href="./3-Summary-Questions/">Summary Questions</a></li>
         </ul>
 
+        <h3><strong>Section 4 - Computer Systems</strong></h3>
+
+        <ul>
+            <li><a href="./4-01-Logic-Gates/">4.01 - Logic Gates</a></li>
+        </ul>
+
         <br />
         <br />
 
