--- a/revision/3-Summary-Questions/index.html
+++ b/revision/3-Summary-Questions/index.html
@@ -261,6 +261,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../4-01-Logic-Gates/">Next: 4.01 - Logic Gates</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
