Simple Truth Tables page

--- a/revision/index.html
+++ b/revision/index.html
@@ -84,6 +84,7 @@
 
         <ul>
             <li><a href="./4-01-Logic-Gates/">4.01 - Logic Gates</a></li>
+            <li><a href="./4-02-Simple-Truth-Tables/">4.02 - Simple Truth Tables</a></li>
         </ul>
 
         <br />
