--- a/revision/4-01-Logic-Gates/index.html
+++ b/revision/4-01-Logic-Gates/index.html
@@ -109,6 +109,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../4-02-Simple-Truth-Tables/">Next: 4.02 - Simple Truth Tables</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
