--- a/revision/4-02-Simple-Truth-Tables/index.html
+++ b/revision/4-02-Simple-Truth-Tables/index.html
@@ -182,6 +182,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../4-03-Complex-Truth-Tables/">Next: 4.03 - Complex Truth Tables</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
