--- a/revision/index.html
+++ b/revision/index.html
@@ -85,6 +85,7 @@
         <ul>
             <li><a href="./4-01-Logic-Gates/">4.01 - Logic Gates</a></li>
             <li><a href="./4-02-Simple-Truth-Tables/">4.02 - Simple Truth Tables</a></li>
+            <li><a href="./4-03-Complex-Truth-Tables/">4.03 - Complex Truth Tables</a></li>
         </ul>
 
         <br />
