Page for Logic Diagrams

--- a/revision/4-03-Complex-Truth-Tables/index.html
+++ b/revision/4-03-Complex-Truth-Tables/index.html
@@ -24,7 +24,7 @@
         <a class="prev-link" href="../4-02-Simple-Truth-Tables/">Previous: 4.02 - Simple Truth Tables</a>
         <br /> <br />
 
-        <p>Let's look at some a more complex truth table. To do this, we will <b>add more columns</b> instead of immediately jumping to the answer.</p>
+        <p>Let's look at a more complex truth table. To do this, we will <b>add more columns</b> instead of immediately jumping to the answer.</p>
 
         <p><br />Table 1 shows the truth table for <code>Q = (A <span class="other">XOR</span> B) <span class="other">AND</span> <span class="other">NOT</span>(C)</code>.</p>
 
@@ -130,7 +130,12 @@
 
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <span id="year">2034-</span></div>
+        <a class="next-link" href="../4-04-Logic-Diagrams/">Next: 4.04 - Logic Diagrams</a>
+
+        <br /> <br />
+        <br /> <br />
+
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
