--- a/revision/index.html
+++ b/revision/index.html
@@ -86,6 +86,7 @@
             <li><a href="./4-01-Logic-Gates/">4.01 - Logic Gates</a></li>
             <li><a href="./4-02-Simple-Truth-Tables/">4.02 - Simple Truth Tables</a></li>
             <li><a href="./4-03-Complex-Truth-Tables/">4.03 - Complex Truth Tables</a></li>
+            <li><a href="./4-04-Logic-Diagrams/">4.04 - Logic Diagrams</a></li>
         </ul>
 
         <br />
