--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <meta property="og:image:width" content="640" />
         <meta property="og:image:height" content="512" />
 
+        <meta http-equiv="content-type" content="text/html; charset=utf-8">
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Computer Science Revision is an online, mobile-friendly revision guide for GCSE Computer Science students.">
     </head>
