--- a/revision/3-10-Huffman-Coding/index.html
+++ b/revision/3-10-Huffman-Coding/index.html
@@ -12,6 +12,8 @@
         <meta property="og:image:width" content="640" />
         <meta property="og:image:height" content="512" />
 
+        <meta http-equiv="content-type" content="text/html; charset=utf-8">
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="3.10 - Huffman Coding | Computer Science Revision (an online, mobile-friendly revision guide for GCSE Computer Science students)">
     </head>
