--- a/revision/4-04-Logic-Diagrams/index.html
+++ b/revision/4-04-Logic-Diagrams/index.html
@@ -12,6 +12,8 @@
         <meta property="og:image:width" content="640" />
         <meta property="og:image:height" content="512" />
 
+        <meta http-equiv="content-type" content="text/html; charset=utf-8">
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="4.04 - Logic Diagrams | Computer Science Revision (an online, mobile-friendly revision guide for GCSE Computer Science students)">
     </head>
@@ -85,6 +87,11 @@
 
         <hr />
 
+        <br /> <br />
+
+        <a class="next-link" href="../4-05-Logic-Symbols/">Next: 4.05 - Logic Symbols</a>
+
+        <br /> <br />
         <br /> <br />
 
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
