--- a/revision/index.html
+++ b/revision/index.html
@@ -89,6 +89,7 @@
             <li><a href="./4-02-Simple-Truth-Tables/">4.02 - Simple Truth Tables</a></li>
             <li><a href="./4-03-Complex-Truth-Tables/">4.03 - Complex Truth Tables</a></li>
             <li><a href="./4-04-Logic-Diagrams/">4.04 - Logic Diagrams</a></li>
+            <li><a href="./4-05-Logic-Symbols/">4.05 - Logic Symbols</a></li>
         </ul>
 
         <br />
