Add 4.06 to homepage

--- a/revision/4-06-Hardware-and-Software/index.html
+++ b/revision/4-06-Hardware-and-Software/index.html
@@ -65,7 +65,7 @@
 
         <p class="definition">
             <img src="../icons/book.svg" class="icon" />
-            An <strong>embedded system</strong> is a computer system which is built-in to another device to perform a specific task.
+            An <strong>embedded system</strong> is a computer system which is built into another device to perform a specific task.
         </p>
 
         <p>There are embedded systems in washing machines, dishwashers and microwaves. Embedded systems have their software (called <b>"firmware"</b>) hard-coded onto their chip, so their instructions cannot be changed.</p>
