--- a/revision/index.html
+++ b/revision/index.html
@@ -90,6 +90,7 @@
             <li><a href="./4-03-Complex-Truth-Tables/">4.03 - Complex Truth Tables</a></li>
             <li><a href="./4-04-Logic-Diagrams/">4.04 - Logic Diagrams</a></li>
             <li><a href="./4-05-Logic-Symbols/">4.05 - Logic Symbols</a></li>
+            <li><a href="./4-06-Hardware-and-Software/">4.06 - Hardware and Software</a></li>
         </ul>
 
         <br />
