--- a/revision/4-06-Hardware-and-Software/index.html
+++ b/revision/4-06-Hardware-and-Software/index.html
@@ -91,6 +91,10 @@
         <hr />
 
         <br /> <br />
+        <a class="next-link" href="../4-07-The-Operating-System/">Next: 4.07 - The Operating System</a>
+
+        <br /> <br />
+        <br /> <br />
 
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
