--- a/revision/index.html
+++ b/revision/index.html
@@ -91,6 +91,7 @@
             <li><a href="./4-04-Logic-Diagrams/">4.04 - Logic Diagrams</a></li>
             <li><a href="./4-05-Logic-Symbols/">4.05 - Logic Symbols</a></li>
             <li><a href="./4-06-Hardware-and-Software/">4.06 - Hardware and Software</a></li>
+            <li><a href="./4-07-The-Operating-System/">4.07 - The Operating System</a></li>
         </ul>
 
         <br />
