--- a/revision/2B-Summary-Questions/index.html
+++ b/revision/2B-Summary-Questions/index.html
@@ -93,7 +93,7 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            Explain two advantages of low-level programming langauges. [4]
+            Explain two advantages of low-level programming languages. [4]
         </p>
 
         <p class="spoiler noselect">
