--- a/revision/index.html
+++ b/revision/index.html
@@ -93,6 +93,7 @@
             <li><a href="./4-06-Hardware-and-Software/">4.06 - Hardware and Software</a></li>
             <li><a href="./4-07-The-Operating-System/">4.07 - The Operating System</a></li>
             <li><a href="./4-08-Utility-Software/">4.08 - Utility Software</a></li>
+            <li><a href="./4-09-The-CPU/">4.09 - The CPU</a></li>
         </ul>
 
         <br />
