--- a/revision/4-09-The-CPU/index.html
+++ b/revision/4-09-The-CPU/index.html
@@ -89,6 +89,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../4-10-Fetch-Execute-Cycle/">Next: 4.10 - Fetch-Execute Cycle</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
