Fix a whole load of typos

--- a/revision/1-02-Pseudocode/index.html
+++ b/revision/1-02-Pseudocode/index.html
@@ -40,7 +40,7 @@
 
         <p class="definition">
             <img src="../icons/book.svg" class="icon" />
-            <strong>Sequence</strong> is just a mattter of writing of writing down the steps in the correct order.
+            <strong>Sequence</strong> is just a matter of writing of writing down the steps in the correct order.
         </p>
 
         <p class="definition">
