--- a/revision/2A-Summary-Questions/index.html
+++ b/revision/2A-Summary-Questions/index.html
@@ -73,7 +73,7 @@
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
                 Name: &nbsp; <b>String</b> &check; &nbsp; (names are collections of characters) <br />
-                Age: &nbsp; <b>Integer</b> &check; &nbsp; (an age is usuall represented as a whole number) <br />
+                Age: &nbsp; <b>Integer</b> &check; &nbsp; (an age is usually represented as a whole number) <br />
                 Height: &nbsp; <b>Float / Real</b> &check; &nbsp; (height in metres is usually a number with a decimal part) <br />
                 Phone number: &nbsp; <b>String</b> &check; &nbsp; (phone numbers start with a 0, which would not be possible to represent as an integer) <br />
                 Employed?: &nbsp; <b>Boolean</b> &check; &nbsp; (there are only two possible options here: true or false)
