--- a/revision/2B-01-Subroutines/index.html
+++ b/revision/2B-01-Subroutines/index.html
@@ -28,7 +28,7 @@
 
         <p class="definition">
             <img src="../icons/book.svg" class="icon" />
-            A <strong>subroutine</strong> is a set of instructions inside an algorthm stored under one name.
+            A <strong>subroutine</strong> is a set of instructions inside an algorithm stored under one name.
         </p>
 
         <p>
@@ -91,7 +91,7 @@
             <b>and many more.
         </b></p>
 
-        <p><br />Example 3 shows a function to convert inches to centimeters.</p>
+        <p><br />Example 3 shows a function to convert inches to centimetres.</p>
 
         <p class="code">
             <img src="../icons/code.svg" class="icon" />
