--- a/revision/2B-02-Local-and-Global-Variables/index.html
+++ b/revision/2B-02-Local-and-Global-Variables/index.html
@@ -47,8 +47,8 @@
             <img src="../icons/code.svg" class="icon" />
             Example 1 <br />
             <code>
-                <span class="keyword">GLOABL</span> x = <span class="number">0</span> <br />
-                <span class="keyword">GLOABL</span> y = <span class="number">0</span> <br />
+                <span class="keyword">GLOBAL</span> x = <span class="number">0</span> <br />
+                <span class="keyword">GLOBAL</span> y = <span class="number">0</span> <br />
                 <br />
                 <span class="keyword">SUBROUTINE</span> <span class="other">move</span>(p, q) <br />
                 &ensp; x &larr; x + p <br />
