--- a/revision/3-08-Compression/index.html
+++ b/revision/3-08-Compression/index.html
@@ -55,7 +55,7 @@
             </tr>
             <tr>
                 <td><em>Data loss</em></td>
-                <td>Some <b>data is premanently lost</b>, even after decompression.</td>
+                <td>Some <b>data is permanently lost</b>, even after decompression.</td>
                 <td>The file can be exactly decompressed into the original so <b>no data is lost</b>.</td>
             </tr>
             <tr>
