--- a/revision/4-06-Hardware-and-Software/index.html
+++ b/revision/4-06-Hardware-and-Software/index.html
@@ -52,7 +52,7 @@
             <strong>System software</strong> means programs which are needed for the computer to function.
         </p>
 
-        <p>This includes the Operating System, utility software, and programming langauge translators.</p>
+        <p>This includes the Operating System, utility software, and programming language translators.</p>
 
         <p><br />There are two types of computer system.</p>
 
