--- a/revision/4-10-Fetch-Execute-Cycle/index.html
+++ b/revision/4-10-Fetch-Execute-Cycle/index.html
@@ -79,6 +79,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../4-11-CPU-Performance/">Next: 4.11 - CPU Performance</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
