--- a/revision/4-11-CPU-Performance/index.html
+++ b/revision/4-11-CPU-Performance/index.html
@@ -84,6 +84,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../4-12-RAM-and-ROM/">Next: 4.12 - RAM and ROM</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
