--- a/revision/4-12-RAM-and-ROM/index.html
+++ b/revision/4-12-RAM-and-ROM/index.html
@@ -78,6 +78,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../4-13-Virtual-Memory/">Next: 4.13 - Virtual Memory</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
