--- a/revision/4-13-Virtual-Memory/index.html
+++ b/revision/4-13-Virtual-Memory/index.html
@@ -66,7 +66,7 @@
 
         <br /> <br />
 
-        <a class="next-link" href="../4.14 Magnetic Storage/">Next: 4.14 - ['Magnetic', 'Storage']</a>
+        <a class="next-link" href="../4.14 Magnetic Storage/">Next: 4.14 - Magnetic Storage</a>
 
         <br /> <br />
         <br /> <br />
