--- a/revision/4-14-Magnetic-Storage/index.html
+++ b/revision/4-14-Magnetic-Storage/index.html
@@ -26,7 +26,33 @@
         <a class="prev-link" href="../4-13-Virtual-Memory/">Previous: 4.13 - Virtual Memory</a>
         <br /> <br />
             
-        <!-- -->
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Secondary Storage</strong> is non-volatile storage which isn't directly accessible by the CPU.
+        </p>
+
+        <p>
+            There are three forms of secondary storage: <b>magnetic, flash,</b> and <b>optical,</b> all of which will be
+            covered over the next three pages.
+        </p>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Hard Disk Drives</strong> (HDDs) are the main form of magnetic storage in computers.
+        </p>
+
+        <p>
+            They are made up of magnetised metal disks, called <b>"platters"</b>, spinning at a rate of around 10,000
+            revolutions per minute.
+        </p>
+
+        <p>
+            Binary data is represented by the direction of magnetisation (North is 1 and South is 0).
+        </p>
+
+        <p>Each platter is divided into <b>"tracks"</b>, and each track into <b>"sectors"</b>.</p>
+
+        <p>There is a read/write head, like the needle on an old record player.</p>
 
         <br />
 
@@ -34,13 +60,14 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            
+            What are the advantages and disadvantages of using HDDs?
         </p>
 
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
-
+                HDDs offer very large storage capacities (several terabytes), and are also very cheap (&lt;5p per GB).
+                However, because of their moving parts, HDDs can be damaged by large impacts like drops.
             </span>
         </p>
 
