--- a/revision/4-15-Flash-Storage/index.html
+++ b/revision/4-15-Flash-Storage/index.html
@@ -26,7 +26,28 @@
         <a class="prev-link" href="../4-14-Magnetic-Storage/">Previous: 4.14 - Magnetic Storage</a>
         <br /> <br />
             
-        <!-- -->
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Solid State Drives</strong> (SSDs) are the main form of flash storage in computers.
+        </p>
+
+        <p>They use electrical currents to represent 1s and 0s.</p>
+
+        <p><br />
+            SSDs have significantly faster read/write times than HDDs. They are also more robust because they have no
+            moving parts.
+        </p>
+
+        <p>However, SSDs are more expensive than HDDs (&approx;10p per GB), and they have a slightly lower capacity.</p>
+
+        <p>
+            Also, flash storage degrades over time, as it only has a limited number of read/write cycles, meaning that
+            SSDs are less reliable than HDDs.
+        </p>
+
+        <p><br />Other types of flash storage include USB sticks and SD cards.</p>
+
+        <p></p>
 
         <br />
 
@@ -34,13 +55,15 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            
+            Would an SSD need defragmentation?
         </p>
 
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
-
+                No, because it takes the same amount of time to read from or write to any memory location on an SSD.
+                HDDs need defragmentation because of the spinning disks: data in adjacent sectors can be read more
+                quickly than data in far away sectors.
             </span>
         </p>
 
