Optical Storage page

--- a/revision/4-16-Optical-Storage/index.html
+++ b/revision/4-16-Optical-Storage/index.html
@@ -26,7 +26,23 @@
         <a class="prev-link" href="../4-15-Flash-Storage/">Previous: 4.15 - Flash Storage</a>
         <br /> <br />
             
-        <!-- -->
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Optical Storage</strong> uses indentations on the surface of a disc to represent binary data.
+        </p>
+
+        <p>CDs, DVDs, and Blu-Ray discs are all forms of Optical Storage.</p>
+
+        <p>CDs store around 700MB of data; DVDs store roughly 4.7GB; and Blu-Ray discs can hold up to 25GB.</p>
+
+        <p>
+            There are three forms of Optical Storage discs: <b>ROM</b> (read-only), <b>R</b> (write-once), and <b>RW</b>
+            (rewritable)
+        </p>
+
+        <p><br />Optical discs are very portable, and quite cheap (&lt;5p per GB).</p>
+
+        <p>However, they can be damaged easily by scratches, so are not very durable.</p>
 
         <br />
 
@@ -34,13 +50,13 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            
+            Would a video game be stored on DVD-ROM, DVD-R, or DVD-RW?
         </p>
 
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
-
+                DVD-ROM, because it shouldn't be rewritten.
             </span>
         </p>
 
