Finish Secondary Storage

--- a/revision/4-16-Optical-Storage/index.html
+++ b/revision/4-16-Optical-Storage/index.html
@@ -42,7 +42,10 @@
 
         <p><br />Optical discs are very portable, and quite cheap (&lt;5p per GB).</p>
 
-        <p>However, they can be damaged easily by scratches, so are not very durable.</p>
+        <p>
+            However, they can be damaged easily by scratches, so are not very durable. Also, they have very low
+            capacity, and slow read/write speeds.
+        </p>
 
         <br />
 
