--- a/revision/4-17-Secondary-Storage-Summary/index.html
+++ b/revision/4-17-Secondary-Storage-Summary/index.html
@@ -26,7 +26,55 @@
         <a class="prev-link" href="../4-16-Optical-Storage/">Previous: 4.16 - Optical Storage</a>
         <br /> <br />
             
-        <!-- -->
+        <p>Now that we have looked at all three types of secondary storage, it's time to compare them.</p>
+
+        <p>Table 1 shows the comparison of Magnetic Storage, Flash Storage, and Optical Storage.</p>
+
+        <p class="table">
+            <img src="../icons/table.svg" class="icon" />
+            Table 1
+        </p>
+
+        <table>
+            <tr>
+                <th>&nbsp;</th>
+                <th><strong>Magnetic Storage</strong></th>
+                <th><strong>Flash Storage</strong></th>
+                <th><strong>Optical Storage</strong></th>
+            </tr>
+            <tr>
+                <td><em>Read/Write Speed</em></td>
+                <td><span class="colour-mid">Middle</span> <i>(~3Gb/s)</i></td>
+                <td><span class="colour-best">Best</span> <i>(~6Gb/s)</i></td>
+                <td><span class="colour-worst">Worst</span> <i>(~50Mb/s)</i></td>
+            </tr>
+            <tr>
+                <td><em>Cost</em></td>
+                <td><span class="colour-mid">Middle</span> <i>(&lt;5p/GB)</i></td>
+                <td><span class="colour-worst">Worst</span> <i>(~10p/GB)</i></td>
+                <td><span class="colour-best">Best</span> <i>(&lt;5p/GB)</i></td>
+            </tr>
+            <tr>
+                <td><em>Capacity</em></td>
+                <td><span class="colour-best">Best</span> <i>(~16TB)</i></td>
+                <td><span class="colour-mid">Middle</span> <i>(~8TB)</i></td>
+                <td><span class="colour-worst">Worst</span> <i>(~25GB)</i></td>
+            </tr>
+            <tr>
+                <td><em>Durability</em></td>
+                <td><span class="colour-mid">Middle</span></td>
+                <td><span class="colour-best">Best</span></td>
+                <td><span class="colour-worst">Worst</span></td>
+            </tr>
+            <tr>
+                <td><em>Portability</em></td>
+                <td><span class="colour-worst">Worst</span></td>
+                <td><span class="colour-mid">Middle</span></td>
+                <td><span class="colour-best">Best</span></td>
+            </tr>
+        </table>
+
+        <br />
 
         <br />
 
@@ -34,13 +82,13 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            
+            What are some other factors for SSDs that weren't mentioned in the table?
         </p>
 
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
-
+                SSDs have a lower power consumption and run cooler than HDDs. However, they deteriorate over time.
             </span>
         </p>
 
