--- a/revision/4-18-Cloud-Storage/index.html
+++ b/revision/4-18-Cloud-Storage/index.html
@@ -25,8 +25,59 @@
 
         <a class="prev-link" href="../4-17-Secondary-Storage-Summary/">Previous: 4.17 - Secondary Storage Summary</a>
         <br /> <br />
-            
-        <!-- -->
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Cloud Storage</strong> is a service where files can be uploaded via the Internet to a remote server.
+        </p>
+
+        <p>The data is then stored on HDDs and SSDs in data centres all around the world.</p>
+
+        <p><b><br />The advantages of Cloud Storage include:</b></p>
+
+        <ul class="spaced-out less-padding-left">
+            <li>
+                Files and applications <b>can be accessed from any Internet-connected device</b> anywhere in the world.
+            </li>
+            <li>
+                Files stored in the cloud <b>can be shared easily</b>, often by just sending someone a link to the file.
+            </li>
+            <li>
+                <b>Working with other people is easier</b> when the files are stored in the Cloud.
+            </li>
+            <li>
+                There is <b>no need to buy potentially expensive hardware</b> to store the data yourself.
+            </li>
+            <li>
+                There is <b>no need for a company to hire IT staff</b> to manage the hardware.
+            </li>
+            <li>
+                <b>Security and backup is managed by the host company</b> so you don't need to worry about it.
+            </li>
+        </ul>
+
+        <p><b><br />The disadvantages of Cloud Storage include:</b></p>
+
+        <ul class="spaced-out less-padding-left">
+            <li>
+                An <b>Internet connection is required</b> to access the files.
+            </li>
+            <li>
+                You are <b>dependent on the host company</b> to manage the security and backup of your files properly.
+            </li>
+            <li>
+                Cloud data <b>could be targeted by hackers</b> more easily than locally-stored data.
+            </li>
+            <li>
+                There is <b>no need to buy potentially expensive hardware</b> to store the data yourself.
+            </li>
+            <li>
+                It is <b>unclear who legally owns the data</b> that is stored on the cloud.
+            </li>
+            <li>
+                Ongoing <b>subscription fees</b> may become expensive in the long term.
+            </li>
+        </ul>
 
         <br />
 
@@ -34,13 +85,14 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            
+            Would it be wise for classified documents to be stored on the Cloud?
         </p>
 
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
-
+                No: Cloud Storage servers are often targeted by hackers, and it may be unclear who legally owns the
+                data, which is not good for classified documents.
             </span>
         </p>
 
