--- a/revision/4-18-Cloud-Storage/index.html
+++ b/revision/4-18-Cloud-Storage/index.html
@@ -102,6 +102,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../4-Summary-Questions/">Next: Section 4 Summary Questions</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
