Page for wired and wireless networks

--- a/revision/5-02-Wired-and-Wireless-Networks/index.html
+++ b/revision/5-02-Wired-and-Wireless-Networks/index.html
@@ -26,7 +26,92 @@
         <a class="prev-link" href="../5-01-Network-Types/">Previous: 5.01 - Network Types</a>
         <br /> <br />
             
-        <!-- -->
+        <p>
+            Networks can be either wired or wireless. Specialised network hardware is required to create both types of
+            networks.
+        </p>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            A <strong>Network Interface Card</strong> (NIC) is a piece of hardware inside a device that allows it to connect to networks.
+        </p>
+
+        <p>NICs exist for both wired and wireless networks.</p>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            A <strong>router</strong> transmits data between different LANs.
+        </p>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            A <strong>switch</strong> is a component of a wired LAN which sends data packets to devices on its network.
+        </p>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            A <strong>Wireless Access Point</strong> is essentially a switch for a wireless network.
+        </p>
+
+        <p>
+            The acronym "WAP" is sometimes used in place of "Wireless Access Point", although we will refrain from using
+            the short form version in this revision guide.
+        </p>
+
+        <p><br />
+            Fun fact: your home broadband router is actually also acting as a switch and a Wireless Access Point.
+        </p>
+
+        <p><br />
+            There are two types of <b>cable</b> used to transmit data in wired networks: copper wires and fibre-optic
+            cables.
+        </p>
+
+        <p>Table 1 shows the comparison of copper wires and fibre-optic cables.</p>
+
+        <p class="table">
+            <img src="../icons/table.svg" class="icon" />
+            Table 1
+        </p>
+
+        <table>
+            <tr>
+                <th>&nbsp;</th>
+                <th><strong>Copper wires</strong></th>
+                <th><strong>Fibre-optic cables</strong></th>
+            </tr>
+            <tr>
+                <td><em>Carries...</em></td>
+                <td>Electricity</td>
+                <td>Light</td>
+            </tr>
+            <tr>
+                <td><em>Transfer speeds</em></td>
+                <td>Slower (up to 10 Gb/s)</td>
+                <td>Faster (up to 100 Tb/s)</td>
+            </tr>
+            <tr>
+                <td><em>Cost</em></td>
+                <td>Cheaper</td>
+                <td>More expensive</td>
+            </tr>
+            <tr>
+                <td><em>Interference</em></td>
+                <td>Some interference</td>
+                <td>No interference</td>
+            </tr>
+        </table>
+
+        <br />
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            A <strong>Wireless LAN</strong> (WLAN) is a local wireless network.
+        </p>
+
+        <p>Wi-Fi, the most well-known example of a wireless network, is a specific family of WLAN protocols.</p>
+
+        <p><br />Wireless networks use <b>radio waves or microwaves</b> to transmit data.</p>
 
         <br />
 
@@ -34,13 +119,20 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            
+            What are the advantages and disadvantages of wireless networks?
         </p>
 
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
-
+                Advantages: <br />
+                &bullet; Wireless networks can be more convenient because you can move around while connected <br />
+                &bullet; New devices can be easily added to a wireless network at no extra cost <br /> <br />
+                Disadvantages: <br />
+                &bullet; Wireless communications can be intercepted by hackers so they are less secure <br />
+                &bullet; Wireless networks are more susceptible to interference from nearby networks <br />
+                &bullet; Radio waves can be blocked by physical obstacles which can reduce signal strength <br />
+                &bullet; Wireless networks typically offer lower bandwidth and therefore lower data transfer speeds
             </span>
         </p>
 
