--- a/revision/5-03-Network-Topologies/index.html
+++ b/revision/5-03-Network-Topologies/index.html
@@ -96,7 +96,7 @@
 
         <br /> <br />
 
-        <a class="next-link" href="../5-04-Packet-Switching/">Next: 5.04 - Packet Switching</a>
+        <a class="next-link" href="../5-04-Protocols/">Next: 5.04 - Protocols</a>
 
         <br /> <br />
         <br /> <br />
