Section 5 Summary Questions

--- a/revision/4-Summary-Questions/index.html
+++ b/revision/4-Summary-Questions/index.html
@@ -241,7 +241,7 @@
 
         <br /> <br />
 
-        <a class="next-link" href="../5-01-Types-of-Networks/">Next: 5.01 - Types of Networks</a>
+        <a class="next-link" href="../5-01-Network-Types/">Next: 5.01 - Network Types</a>
 
         <br /> <br />
         <br /> <br />
