--- a/revision/5-05-Network-Security/index.html
+++ b/revision/5-05-Network-Security/index.html
@@ -156,6 +156,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../5-Summary-Questions/">Next: Section 5 Summary Questions</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
