--- a/revision/index.html
+++ b/revision/index.html
@@ -116,6 +116,7 @@
             <li><a href="./5-04-Packet-Switching/">5.04 - Packet Switching</a></li>
             <li><a href="./5-04-Protocols/">5.04 - Protocols</a></li>
             <li><a href="./5-05-Network-Security/">5.05 - Network Security</a></li>
+            <li><a href="./5-Summary-Questions/">Summary Questions</a></li>
         </ul>
 
         <br />
